update README and add QR code

--- a/main.html
+++ b/main.html
@@ -977,7 +977,7 @@ Nearly 1 in 10 fatal accidents are caused by distracted driving!
 </section></section>
 <section id="thank-you" class="title-slide slide level1" data-background-image="img/backgrounds/neon.png">
 <h1>Thank you</h1>
-<p><img data-src="img/end/questions.gif" class="absolute" style="top: 10%; left: 15%; height: 100%; "></p>
+<p><img data-src="img/end/questions.gif" class="absolute" style="top: 20%; left: 10%; height: 60%; "> <img data-src="img/end/presentation.svg" class="absolute" style="top: 40%; left: 70%; height: 40%; "> <img data-src="img/end/quarto.png" class="absolute" style="top: 32%; left: 71%; height: 7%; "></p>
 <div class="quarto-auto-generated-content">
 <p><img src="img/backgrounds/TUDelft_logo_cmyk.png" class="slide-logo"></p>
 <div class="footer footer-default">
