update README and add QR code

--- a/main.html
+++ b/main.html
@@ -520,7 +520,7 @@ Nearly 1 in 10 fatal accidents are caused by distracted driving!
 <section id="section-4" class="title-slide slide level1" data-auto-animate="true;" data-background-color="#66cccc">
 <h1 data-id="quarto-animate-title"></h1>
 <div class="r-fit-text">
-<p><span class="flow">What Are We Doing To Help</span></p>
+<p><span class="flow">What Are We Doing To Help?</span></p>
 </div>
 </section>
 <section id="sbft-self-driving-competition" class="slide level2" data-auto-animate="true">
